# Sample-CPP-Project

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
lib/: foo.cc  foo.h
src/: main.cc
tests/: test1.cc
